German/Lenguajes y compiladores/Lab3/tests/bad/bad08.imp
data Bool = True | False
data N = O | S <N>

method not (b : Bool) returns (b2 : Bool)
{
}

method suma (n : N, b : Bool) returns (r : N)
{
    -- wrong number of arguments types
    r := not(b, n)
} 
